# ChangeLog for dev-tex/tth
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tex/tth/ChangeLog,v 1.9 2010/10/10 18:16:48 klausman Exp $

  10 Oct 2010; Tobias Klausmann <klausman@gentoo.org> tth-3.77.ebuild:
  Keyworded on alpha, bug #327811

  19 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> tth-3.77.ebuild:
  Keyword ~ppc64 wrt #327811.

  26 Dec 2009; Peter Volkov <pva@gentoo.org> tth-3.77.ebuild:
  virtual/ghostscript->app-text/ghostscript-gpl: ghostscript-gpl is the only
  implementation left in the tree.

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> tth-3.66.ebuild,
  tth-3.77.ebuild:
  Remove virtual/libc

*tth-3.77 (27 Jul 2007)

  27 Jul 2007; Alexis Ballier <aballier@gentoo.org> +tth-3.77.ebuild:
  bump to latest version, install latex2gif ps2gif ps2png, bug #185328

  24 Jul 2007; Steve Dibb <beandog@gentoo.org> tth-3.66.ebuild:
  Add ~amd64, bug 185326

  12 Mar 2007; Alexandre Buisse <nattfodd@gentoo.org> metadata.xml:
  Replaced text-markup by tex as maintaining herd (text-markup split).

  05 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

*tth-3.66 (12 Feb 2005)

  12 Feb 2005; Mamoru KOMACHI <usata@gentoo.org> +metadata.xml,
  +tth-3.66.ebuild:
  Initial import. Ebuild submitted by Niels Laukens <nielchiano@skynet.be>;
  bug #70442.
