@@ -1,6 +1,6 @@
 DIST tth-3.77.tgz 322313 RMD160 14d08e0fcf0c563a45feeb15f9a0f41930ec0865 SHA1 3aad611337f49c1f531429d662799ad07c4f70a3 SHA256 2ac11c76cbe21879b8ca3cbd47dd6349adfca869a465870c79f87046432fc28c
 DIST tth_C.tgz 322346 RMD160 f66b0dce655c082997edb318f0e2f71e37db92ea SHA1 f04cf76cfad3d08264337985878bd92a52b387bf SHA256 697c3505aa8d0f7c56feda5c2eb85bb53572af5175e6b0669cd404e4e3b59094
 EBUILD tth-3.66.ebuild 631 RMD160 c966f4df3a87b9227219966c4786f75338d4ed05 SHA1 26c232aae8b598abe0c9c72fc548de997aec8228 SHA256 ab806783d552f9ea263645606da0923fc590dd673a6cd56f4e28683b6461fb88
-EBUILD tth-3.77.ebuild 720 RMD160 d70235fa1185ab345d72dad218d193565a4fd2bc SHA1 6b17883550b26450c757f0ca3b0e940dfad1e3c2 SHA256 e049b9717ad97fd7bccf13fd5b7f0a6e7d2532224424f312f289c847d09f7062
-MISC ChangeLog 1392 RMD160 1ef9baa64637f5a2863d62596c2f3bfd9a6cd65c SHA1 5ec50d4b198a560d9a298cb6e21c153870f70a3d SHA256 3796b88e759e96dae5bed61dacb05202c9ec4f53a39f8bc2fc3c2c204689eaf2
+EBUILD tth-3.77.ebuild 727 RMD160 cbb9e2e921e4a9191872d52cc6065b449e4ecd44 SHA1 47a34beef2f3f328d8d556b5061e1d4bb11449bb SHA256 0a5a03a2ac41355c39a21c89bd1baf5eda70d5a517b87ce7e61f6fe3cf2565b0
+MISC ChangeLog 1493 RMD160 412b1e04e182c9cbddecd63d60289fd8c85b1260 SHA1 f00169bfb61def489c4eeb436c22e156b8a93ad1 SHA256 6292b691f18d36512b8287eb11e20bd6a8890e8fd16401090f3d45501d463f22
 MISC metadata.xml 156 RMD160 2bf6b2ed9ff0fcef1e902cf093ccf4ae2dcc70a0 SHA1 e9260cd53905d8569cf3327ded4c6d01653fc389 SHA256 b4971b8472ab3fe4fbfe41b331a79193ca19e86c08d055ad1c20eaf9e04b79b6
